copy m2_sympto_DE.Rmd script to modify into script for prepping files for DE - downsampling etc

--- a/local_rmd_nbooks/m2_field_lab_strains_DE_prep.Rmd
+++ b/local_rmd_nbooks/m2_field_lab_strains_DE_prep.Rmd
@@ -102,6 +102,10 @@ system(paste0("rsync -av jr35@farm5:/lustre/scratch126/tol/teams/lawniczak/users
 
 ```
 
+
+```{r}
+all_msc_w_strns_don <- readRDS("data/processed/Pf/all_msc_w_strns_don.RDS")
+```
 initialize variable for the sample names
 
 ```{r}
